--- a/html/register.html
+++ b/html/register.html
@@ -13,21 +13,21 @@
                 <h2 class="text-center mt-5">Регистрация</h1>
                   <form method="GET" action="/submit-register">
                     <div class="mb-3">
+                      <label for="name" class="form-label">Имя</label>
+                      <input type="text" class="form-control" id="name" name="name" value="maria" aria-describedby="nameHelp" required>
+                    </div>
+                    <div class="mb-3">
                       <label for="login" class="form-label">Логин</label>
                       <input type="text" class="form-control" id="login" name="login" value="maria" aria-describedby="loginHelp" required>
                     </div>
                     <div class="mb-3">
-                      <label for="exampleInputPassword1" class="form-label">Пароль</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" name="password" value="" required>
+                      <label for="password" class="form-label">Пароль</label>
+                      <input type="password" class="form-control" id="password" name="password" value="" required>
                     </div>
-                    <div class="mb-3">
+                    <!-- <div class="mb-3">
                         <label for="exampleInputPassword2" class="form-label">Подтверждение пароля</label>
                         <input type="password" class="form-control" id="exampleInputPassword2" name="password" value="" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" value="" required>
-                    </div>
+                    </div> -->
                     <div class="row justify-content-center text-center">
                         <div class="col-4 d-grid">
                         <button type="submit" class="btn btn-warning">Зарегестрироваться</button>
